--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital,wght@0,300..700;1,300..700&display=swap');
 @import 'tailwindcss';
 
 @theme {
-  --font-doto: 'sans-serif';
+  --font-Red-Mono: Red-Hat-Mono;
 }
